--- a/custom_components/posterfy/manifest.json
+++ b/custom_components/posterfy/manifest.json
@@ -1,5 +1,7 @@
 {
-  "codeowners": ["@xmlguy74"],
+  "codeowners": [
+    "@xmlguy74"
+  ],
   "config_flow": false,
   "dependencies": [],
   "documentation": "https://github.com/xmlguy74/posterfy-homeassistant",
@@ -7,5 +9,5 @@
   "iot_class": "cloud_polling",
   "name": "Posterfy",
   "requirements": [],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
